> Zmieniłem jednak trochę translator żeby mi getter zwracał to co mi jest potrzebne. > Dodałem onStop() w głównej aktywności, która zatrzymuje wątki. > Zmieniłem w Sender sposób wysyłania, teraz co każdy znak będzie wysyłany kontrolujący dźwięk informujący o tym, że zaraz będzie następny znak. > Poprawiłem wykrywanie częstotliwości - skorzystałem z autokorelacji (https://en.wikipedia.org/wiki/Autocorrelation), która (zwłaszcza dla niższych częstotliwości) daje lepsze wyniki niż FFT. FFT jednak nadal zostawiłem dla częstotliwości wyższych, które dobrze rozróżnia. > Dodałem Handler, który obsługuje analizowane częstotliwości. Teraz Receiver co 1/10 sekundy wysyła do Handler'a częstotliwość, która w ciągu ostatnich 0.5s była liderem. > Do layout'a dodałem atrybut, który sprawia, że ekran nie będzie się już wygaszał - warto zmienić na to, żeby się nie wygaszał tylko podczas odbierania.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.edu.mimuw.students.fouriersphone.MainActivity">
+    tools:context="pl.edu.mimuw.students.fouriersphone.MainActivity"
+    android:keepScreenOn="true">
 
     <EditText
         android:id="@+id/editText"
@@ -45,5 +46,15 @@
         android:onClick="clickDoButton"
         app:layout_constraintBottom_toTopOf="@+id/modeSwitch"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/frequency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:text="0.0"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
