--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:inputType="textMultiLine"
         android:scrollHorizontally="false"
         android:singleLine="false"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/main_act"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -93,5 +94,38 @@
         android:drawableTop="@drawable/ic_hearing_black_24dp"
         app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/receive_file"
+        style="@android:style/Widget.Material.Button"
+        android:layout_width="250dp"
+        android:layout_height="300dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="75dp"
+        android:drawableTop="@drawable/ic_archive_black_24dp"
+        android:text="save file"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/main_act"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/send_file"
+        android:layout_width="250dp"
+        android:layout_height="300dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="75dp"
+        android:drawableTop="@drawable/ic_unarchive_black_24dp"
+        android:text="select file"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/main_act"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
