podpięcie klas Wojtka

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,14 +101,12 @@
         style="@android:style/Widget.Material.Button"
         android:layout_width="250dp"
         android:layout_height="300dp"
-        android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="100dp"
         android:drawableTop="@drawable/ic_archive_black_24dp"
         android:text="save file"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/main_act"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -117,15 +115,42 @@
         android:id="@+id/send_file"
         android:layout_width="250dp"
         android:layout_height="300dp"
-        android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="100dp"
         android:drawableTop="@drawable/ic_unarchive_black_24dp"
         android:text="select file"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/main_act"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/downloads_spinner"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/main_act"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/send_file" />
+
+    <EditText
+        android:id="@+id/file_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="file_name.txt"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/main_act"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/send_file" />
 </android.support.constraint.ConstraintLayout>
